--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <title>
+            Photo Gallery
+        </title>
     </head>
     <body>
-
+        <header class="header">
+            <h1>CSS FLEXBOX PHOTO GALLERY</h1>
+        </header>
+        <div class="gallery">
+            <img>
+            <img>
+            <img>
+            <img>
+            <img>
+            <img>
+            <img>
+            <img>
+            <img>
+        </div>
     </body>
 </html>
