--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             <h1>CSS FLEXBOX PHOTO GALLERY</h1>
         </header>
         <div class="gallery">
-            <img>
-            <img>
-            <img>
-            <img>
-            <img>
-            <img>
-            <img>
-            <img>
-            <img>
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="sleeping">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="playful">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="stare"> 
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="under blanket">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="kitten">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="kittenss">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="kitten under blanket">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="cute kitten">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="Noir Blanc">
         </div>
     </body>
 </html>
